# spacecraft-perception-extended-kalman

./: API_REFERENCE.md  README.md  pyproject.toml
examples/: compare_errors_demo.py  multi_sensor_fusion_demo.py
kalman/: __init__.py
kalman/applications/: __init__.py  multi_sensor_fusion.py  orbit_determination.py  relative_nav_docking.py  space_object_tracking.py
kalman/dynamics/: __init__.py  atmosphere.py  base.py  j2_perturbed.py  relative_cw.py  relative_hcw.py  two_body.py
kalman/ekf_core/: __init__.py  ekf.py  interfaces.py  state.py
kalman/estimation/: __init__.py  imm.py
kalman/fusion/: __init__.py  covariance_intersection.py  decentralized.py  local_filter.py
kalman/measurements/: __init__.py  angles_only.py  base.py  gps.py  range_bearing.py  range_bearing_from_station.py  range_rate.py  relative_pose.py
kalman/tests/: test_applications.py  test_dynamics.py  test_ekf_core.py  test_fusion.py  test_imm.py  test_measurements.py  test_utils.py
kalman/utils/: __init__.py  constants.py  coordinates.py  time_.py
scripts/: gen_api_docs.py
